# tiny-api-client

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Pipfile  README.md  pyproject.toml  test_api_client.py  tiny_api_client.py
.github/: FUNDING.yml
.github/workflows/: build.yml
docs/: api_reference.rst  conf.py  index.rst  quick.rst  requirements.txt  testing.rst  typing.rst
tests/: test_api_client.py  test_mypy_plugin.ini  test_mypy_plugin.yml
tiny_api_client/: __init__.py  mypy.py
